fixes icons on small screen

--- a/styles.css
+++ b/styles.css
@@ -304,8 +304,7 @@ border-color: var(--primary-color-light);
     }
 }
 @media (max-width: 992px) {
-    .whatsapp-button,
-    .whatsapp-icon {
+    .whatsapp-button{
         display: none !important;
         visibility: hidden !important;
         pointer-events: none !important;
